--- a/style.css
+++ b/style.css
@@ -1965,7 +1965,7 @@ hr.new20 {
 
 .do-section, .req-section {
   flex: 1;
-  min-width: 300px;
+  /* min-width: 300px; */
   max-width: 400px;
 }
 
